# termchat

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: error.rs  implemessage.rs  login.rs  main.rs  message.rs  middleware.rs
