[package]
name = "termchat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
futures = "0.3"
# futures_util ="0.1.?
axum = { version = "0.7.4", features = ["ws"] }
tracing = "0.1"
tower = { version = "0.4", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.21.0"
