[package]
name = "termchat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
axum-macros = "0.4.1"
url = "2.5.0"
hyper = "1.2.0"
rustc-serialize = "0.3.19"
tracing-subscriber = "0.3.18"
signal-hook = "0.3.17"
log = "0.4"
